# reST-slides-talk

./: .gitignore  Makefile  README.rst  my-talks.rst  notes.rst  pyproject.toml  rst-slide-notes.rst  rst-slides.rst
